--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.6",
     "@astrojs/starlight": "^0.13.1",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "astro": "^3.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rehype-mathjax": "^5.0.0",
+    "remark-math": "^6.0.0",
     "sharp": "^0.32.5"
   }
 }
