--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^3.0.6",
     "@astrojs/starlight": "^0.13.1",
+    "@astrojs/vercel": "^5.2.0",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "astro": "^3.2.3",
