--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
   "dependencies": {
     "@astrojs/react": "^3.0.6",
     "@astrojs/starlight": "^0.14.0",
+    "@astrojs/starlight-tailwind": "^2.0.1",
+    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^5.2.0",
+    "@nextui-org/react": "^2.2.9",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "astro": "^3.2.3",
+    "framer-motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "rehype-mathjax": "^5.0.0",
     "remark-math": "^6.0.0",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "tailwindcss": "^3.4.0"
   }
 }
