--- a/package.json
+++ b/package.json
@@ -16,17 +16,24 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^5.2.0",
     "@nextui-org/react": "^2.2.9",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "astro": "^3.2.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0-rc18",
     "framer-motion": "^10.17.0",
+    "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "rehype-mathjax": "^5.0.0",
     "remark-math": "^6.0.0",
     "sharp": "^0.32.5",
-    "tailwindcss": "^3.4.0"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
