--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ dist/
 node_modules/
 
 
+# Do not ignore @astrojs packages
+!node_modules/@astrojs
+!node_modules/@astrojs/**
+
 
 # logs
 npm-debug.log*
