--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rehype-mathjax": "^5.0.0",
     "remark-math": "^6.0.0",
     "sharp": "^0.32.5",
+    "starlight-image-zoom": "^0.7.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
