--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0-rc18",
     "framer-motion": "^10.17.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
